Add licensing information, CC attribution non-commercial

--- a/InfoSecTitle.tex
+++ b/InfoSecTitle.tex
@@ -1,4 +1,6 @@
- \title{\vspace*{-2cm} Notes for COS 432 - Information Security\vspace*{-12mm}}
+ \title{\vspace*{-2cm} Notes for COS 432 - Information Security\vspace*{-12mm}\footnote{This work is licensed under
+a Creative Commons Attribution-NonCommercial 4.0 International license.  
+For details see \url{https://creativecommons.org/licenses/by-nc/4.0/}}}
  \author{}
  \date{}
  \maketitle
