Updates lecture classroom.

--- a/Lecture01.tex
+++ b/Lecture01.tex
@@ -4,7 +4,7 @@ Professor: Ed Felten
 
 Website: \url{http://bit.ly/Ribzeh} and Piazza
 
-Lectures: 11am Monday, Wednesday in Computer Science 104
+Lectures: 11am Monday, Wednesday in McCosh 50
 
 \sektion{1}{Message Integrity}
 \subsektion{Sending messages}
