Updated lecture 9 from 10/08/14

--- a/Lecture08.tex
+++ b/Lecture08.tex
@@ -138,8 +138,9 @@ Tradeoffs:
     want some kind of revocation, but hard to do
     
     \item OS table
+    
     (+) can control flow of passage of capabilities\\
-    (+) revocation is much easier
+    (+) revocation is much easier\\
     (--) centralized, requires overhead, lack of flexibility, 
 \end{itemize}
 
