--- a/Lecture09.tex
+++ b/Lecture09.tex
@@ -1,4 +1,4 @@
-% Lecture 9: 15 October 2012
+% Lecture 9: 08 October 2014
 \sektion{9}{Information flow and multi-level security}
 Information flow: how to control propagation of information within a program or
 between programs on a system where there is some confidentiality requirement.
@@ -7,21 +7,36 @@ Consider a program $P(v, s, r)$:
 \begin{itemize}
     \item $v$: visible (public) input
     \item $s$: secret input
-    \item $r$: randomness (secret)
+    \item $r$: random seed
 \end{itemize}
-Output: all visible actions of program
+Output: all visible actions of program. Output doesn't "leak" s. 
 
 Does the output of $P$ leak information about $s$? Define a game against
-adversary guessing between two possible secrets $s$. To avoid leakage, the
-distribution of outputs must be independent of $s$ for all possible values of
-$v$.
+adversary guessing between two possible secrets $s$ (similar to semantic security). To avoid leakage, the distribution of outputs must be independent of $s$ for all possible values of $v$.
+
+Game:
+\begin{itemize}
+	\item adversary chooses v, $s_0$, $s_1$
+	\item we announce P(v, $s_b$, r), where $b \in \{0,1\}$, r are secret and random
+	\item adversary guesses b
+\end{itemize}
+
+We say P doesn't leak s if adversary can't be correct with probability non-negligibly greater than $50\%$ (assuming a computationally-limited adversary).
 
 How to enforce non-leakiness?
 
 Unlike with previous properties, cannot enforce by watching $P$ run.
 (Just because no output came out doesn't mean there wasn't a leak - ``dog that
-didn't bark problem''). It's inherently necessary to consider what-ifs that
-differ from what you actually saw
+didn't bark problem''). We can't prove this property by testing. It's inherently necessary to consider what-ifs that differ from what you actually saw. 
+
+Also, in practice requirement are more complex (more complex labels, and different labels on different data). 
+
+Generalization:
+\begin{itemize}
+	\item label information (e.g. inputs)
+	\item put requirements on outputs
+	\item enforce that outputs respect requirements
+\end{itemize}
 
 \subsektion{Lattice model}
 General model for information flow policy
@@ -41,9 +56,15 @@ General model for information flow policy
     \end{itemize}
     least upper bound of $a, b$:
     \begin{itemize}
-        \item $a \sqsubseteq U$ and $b \sqsubseteq U$ and for all $v \in S$,
+        \item $a \sqsubseteq U$ and $b \sqsubseteq U$ and for all $V \in S$,
             $a \sqsubseteq V$ and $b \sqsubseteq V$ $\Rightarrow$
             $U \sqsubseteq V$
+    \end{itemize}
+    greatest lower bound of $a, b$:
+    \begin{itemize}
+        \item $L \sqsubseteq a$ and $L \sqsubseteq b$ and for all $V \in S$,
+            $V \sqsubseteq a$ and $V \sqsubseteq a$ $\Rightarrow$
+            $V \sqsubseteq L$
     \end{itemize}
 \end{definition}
 \begin{example}{Lattices}
@@ -54,7 +75,7 @@ General model for information flow policy
 
             unclassified $\sqsubseteq$ classified $\sqsubseteq$ secret
                 $\sqsubseteq$ top secret
-        \item compartments
+        \item compartments (e.g. project, client ID, job function)
 
             state is set of labels, $\sqsubseteq$ is subset
         \item org chart
@@ -67,29 +88,34 @@ General model for information flow policy
     \end{enumerate}
 \end{example}
 \subsektion{Information flow in a program}
-At each point in the program, every variable has a state (that comes from the
-lattice we're using). Inputs are tagged with state, and states are propagated
-when code executes: $a = b + c$; State($a$) = LUB(State($b$), State($c$))
+At each point in the program, every variable has a state/label (that comes from the
+lattice we're using). Inputs are tagged with state. Outputs are tagged with a requirement. States are propagated
+when code executes.
+
+Example: $a = b + c$; State($a$) = LUB(State($b$), State($c$))
 [LUB = Least Upper Bound]
 
 Before providing output, check that state of output value is consistent with
-policy. (For example, only allowed to emit unclassified output.)
+policy. (For example, only allowed to emit unclassified output.) Formally, ensure that $label(v) \sqsubseteq L$, where L is the required policy.
 
 But this isn't enough (only monitoring and rejecting when inconsistent with
 policy) -- ``dog that didn't bark'':
 \begin{verbatim}
 // State(a) = ``secret''
-b = 0;  // 0 isn't secret, so b is set to unclassified
-if (a > 5)  b = 1;  // Requires static (compile-time) analysis to get right
+// State(c) = State(d) = public
+b = c;
+if (a > 5)  b = d;  // Requires static (compile-time) analysis to get right
 output b;   // Says something about a, so should be labelled as secret
 \end{verbatim}
 Static analysis won't catch all, but will catch some of the leaks.
 \begin{description}
     \item[Problem 1:] conservative analysis leads to being overly cautious
-    \item[Problem 2:] timing might depend on values
+    \item[Problem 2:] timing might depend on values (can lead to covert channel attacks)
 \end{description}
 
 {\bf What if you can't prevent a program from leaking the information it has?}
+
+Conservative assumption (contagion model): every programs leaks all its inputs to all its outputs. 
 
 {\bf Bell-LaPadula model}: lattice-based information flow for programs and files
 \begin{itemize}
@@ -106,9 +132,10 @@ enforced, then information from $F_2$ cannot leak into $F_1$.
 
 Problems:
 \begin{enumerate}
-    \item expections (need to make explicit loopholes in system to allow)
+    \item exceptions (need to make explicit loopholes in system to allow)
     \begin{itemize}
-        \item declassification of old data
+        \item declassify/unprotect old data
+        \item what about encryption (hope "secret" ciphertext doesn't leak plaintext)
         \item aggregate/``anonymized'' data
         \item policy decision to make exception
     \end{itemize}
@@ -128,6 +155,7 @@ integrity?
 
 {\bf Biba model}: (B-LP for integrity)
 \begin{itemize}
+    \item Label/state: how much we trust program with respect to integrity/how important file is
     \item Rule 1: ``No Read Down''
     \item Rule 2: ``No Write Up''
 \end{itemize}
